# engine-native

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CocosGameWASM.js  Hello-DONT-merge  README.md  download-deps.py  exclude.txt  gulpfile.js  package-lock.json  package.json  predefine.cmake
.github/workflows/: automation_labels.yml  bindings.yml  build.yml  clang-format.yml  clangtidy-android.yml  cmake.yml  compile-platforms.yaml  compile-platforms.yml  linter-android.yml  run_test_cases.yml  simulator.yml  unit-test.yml
cmake/: predefine.cmake
cmake/scripts/: gen_debugInfos.js
cocos/: Android.mk  cocos2d.h
cocos/2d/: CCFontFreetype.cpp  CCFontFreetype.h  CCLabelLayout.cpp  CCLabelLayout.h  CCNode.cpp  CCNode.h  CCParticleSystem.cpp  CCParticleSystem.h  CCSpriteBatchNode.cpp  CCTTFLabelAtlasCache.cpp  CCTTFLabelAtlasCache.h  CCTTFLabelRenderer.cpp  CCTTFLabelRenderer.h
cocos/ar/: ARModule.cpp  ARModule.h  IARAPI.h
cocos/audio/: AudioEngine.cpp
cocos/base/: Agent.h  AutoreleasePool.cpp  AutoreleasePool.h  CCConfiguration.cpp  CCConfiguration.h  CCData.cpp  CCData.h  CCDirector.cpp  CCGLUtils.cpp  CCGLUtils.h  CCLog.cpp  CCLog.h  CCMap.h  CCRefPtr.h  CCRenderTexture.cpp  CCRenderTexture.h  CCThreadPool.h  CCVector.h  CMakeLists.txt  CachedArray.h  Config.h  CoreStd.h  Data.cpp  Data.h  IndexHandle.h  Log.cc  Log.cpp  Log.h  Macros.h  Map.h  Random.h  Ref.h  Scheduler.cpp  Scheduler.h  StringHandle.h  StringPool.h  StringUtil.cpp  StringUtil.h  ThreadPool.cpp  Timer.cpp  (+25 more)
cocos/container/: Allocator.cpp  Allocator.h  LinkedList.h  RefCounted.cpp  RefCounted.h
cocos/editor-support/: IOBuffer.cpp  IOBuffer.h  IOTypedArray.cpp  IOTypedArray.h  MeshBuffer.h  MiddlewareMacro.h  MiddlewareManager.cpp  MiddlewareManager.h  SharedBufferManager.h  TypedArrayPool.cpp  TypedArrayPool.h  middleware-adapter.cpp  middleware-adapter.h
cocos/engine/: Engine.cpp
cocos/math/: Color.cpp  Color.h  Mat3.cpp  Mat4.cpp  Mat4.h  Math.cpp  Math.h  MathBase.h  MathUtil.cpp  MathUtil.h  Quaternion.cpp  Quaternion.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec3.inl  Vec4.cpp
cocos/network/: CCDownloader-android.cpp  CCDownloader-android.h  CCDownloader-curl.cpp  CCDownloader-curl.h  CCDownloader.cpp  CCDownloader.h  CCDownloaderImpl-apple.mm  CCIDownloaderImpl.h  Downloader-android.cpp  Downloader-android.h  Downloader-curl.cpp  Downloader-curl.h  Downloader-java.cpp  Downloader-java.h  Downloader.cpp  Downloader.h  DownloaderImpl.h  HttpClient-android.cpp  HttpClient-java.cpp  HttpClient.cpp  HttpClient.h  HttpCookie.cpp  HttpCookie.h  HttpRequest.h  HttpResponse.h  SocketIO.cpp  SocketIO.h  Uri.cpp  Uri.h  WebSocket-apple.mm  WebSocket-libwebsockets.cpp  WebSocket.h  WebSocketServer.cpp  WebSocketServer.h
cocos/physics/: PhysXBindings.cpp  PhysXBindings.h  PhysicsSDK.h  PhysicsSelector.h
cocos/platform/: Application.cpp  Application.h  CCApplication.h  CCDevice.h  CCFileUtils.cpp  CCFileUtils.h  CCImage.cpp  CCImage.h  CCPlatformConfig.h  CanvasRenderingContext2D.h  Device.h  FileUtils.cpp  FileUtils.h  Image.cpp  Image.h  SAXParser.cpp  SAXParser.h  StdC.h
cocos/primitive/: Primitive.cpp
cocos/renderer/: CMakeLists.txt  GFXDeviceManager.h
cocos/renderer/gfx-wgpu/: CMakeLists.txt  WGPUBuffer.cpp  WGPUBuffer.h  WGPUCommandBuffer.cpp  WGPUCommandBuffer.h  WGPUContext.cpp  WGPUContext.h  WGPUDef.h  WGPUDescriptorSet.cpp  WGPUDescriptorSet.h  WGPUDescriptorSetLayout.cpp  WGPUDescriptorSetLayout.h  WGPUDevice.cpp  WGPUDevice.h  WGPUExports.h  WGPUFrameBuffer.cpp  WGPUFrameBuffer.h  WGPUInputAssembler.cpp  WGPUInputAssembler.h  WGPUObject.h  WGPUPipelineLayout.cpp  WGPUPipelineLayout.h  WGPUPipelineState.cpp  WGPUPipelineState.h  WGPUQueue.cpp  WGPUQueue.h  WGPURenderPass.cpp  WGPURenderPass.h  WGPUSampler.cpp  WGPUSampler.h  WGPUShader.cpp  WGPUShader.h  WGPUSwapchain.cpp  WGPUSwapchain.h  WGPUTexture.cpp  WGPUTexture.h  WGPUUtils.h  readme.md  webgpu_wasm.js  webgpu_wasm.wasm
cocos/scene/: AABB.cpp  AABB.h  Ambient.cpp  Ambient.h  BakedSkinningModel.cpp  BakedSkinningModel.h  BaseNode.h  Camera.h  Define.h  DirectionalLight.cpp  DirectionalLight.h  DrawBatch2D.cpp  DrawBatch2D.h  Frustum.cpp  Frustum.h  Light.cpp  Light.h  Model.cpp  Model.h  Node.cpp  Node.h  Octree.cpp  Octree.h  Pass.cpp  Pass.h  RenderScene.cpp  RenderScene.h  RenderWindow.cpp  RenderWindow.h  SkinningModel.cpp  SkinningModel.h  Skybox.cpp  Skybox.h  Sphere.cpp  Sphere.h  SphereLight.cpp  SphereLight.h  SpotLight.cpp  SpotLight.h  SubModel.cpp  (+1 more)
cocos/ui/: UIScrollView.cpp  UIVideoPlayer-android.cpp  UIVideoPlayer-ios.mm  UIWebView.cpp  UIWebViewImpl-android.cpp
cocos/vr/: VRContext.cpp  VRContext.h
docs/: CODING_STYLE.md  LINTER_AUTOFIX_GUIDE.md
extensions/: Android.mk
extensions/assets-manager/: AssetsManagerEx.cpp  AssetsManagerEx.h  AsyncTaskPool.h  CCAsyncTaskPool.h  CCEventAssetsManagerEx.cpp  CCEventAssetsManagerEx.h  CCEventListenerAssetsManagerEx.cpp  CCEventListenerAssetsManagerEx.h  EventAssetsManagerEx.cpp  EventAssetsManagerEx.h  Manifest.cpp  Manifest.h
templates/: cocos2dx_files.json
templates/common/: CMakeLists.txt
templates/ios/: AppDelegate.mm  CMakeLists.txt  ViewController.mm
templates/js-template-link/: cocos-project-template.json
templates/mac/: AppDelegate.mm  CMakeLists.txt  TestViewController.h  TestViewController.mm
templates/ohos/: CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
templates/win32/: AppDelegate.cpp  AppDelegate.h  main.cpp
templates/windows/: AppDelegate.cpp  CMakeLists.txt
tests/: CMakeLists.txt
tests/bindings/: CMakeLists.txt  test-bindings.cpp
tests/log/: CMakeLists.txt
tests/module-tests/: run-test-windows.sh
tools/cmake-generator/static/libcocos2d/: CMakeLists.txt  CMakeSettings.json
tools/cmake-generator/static/project/: CMakeLists.txt
tools/cmake-generator/static/project/Classes/: AppDelegate.cpp
tools/cmake-generator/static/project/win32/: main.cpp
unit-test/: CMakeLists.txt  CMakeLists.txt.in  README
utils/: clear-platform.js  download-deps.js
(+1943 files in other folders)
